--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.fancy-letter {
+    font-family: 'Bonheur Royale', cursive;
+    font-size: 10rem;
+}
